@@ -1,3 +1,9 @@
+2004-10-26  Reinhard Max  <max@suse.de>
+
+	* generic/tkEvent.c (Tk_HandleEvent): Call XSetICFocus whenever
+	the window receives focus. This fixes bug #905830 but avoids
+	#1000051.
+	
 2004-10-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinWm.c (UpdateWrapper): pass SWP_NOOWNERZORDER to
